lab1/Test/L1-A-3-86.output
Error Type A at Line 3
Error Type A at Line 14
Error Type A at Line 15
Error Type A at Line 19
Error Type B at Line 22
Error Type B at Line 22
