lab1/Test/L1-A-3-86.cmm
struct {
}fQhhMvME ( ) {
  float R53bMpXC = fuI '( ! sR = qCe8qH1rK , AcP9RyY2H 
    ) * ! qdfTrRiV / KlhyWhq0 ( ) [ PqLzEeIJqupgUFO ] 
    . sO7 / - ppDifoXR0AsIbwKDvkM == vMlRVF3RJe ( ) * 
    DVoKJ_VOMPQMR * u / nn6e - s7CwZ5K == - UY / zhDNwy73S 
    / d - pBu3Eo7 - vuVNp5xJw1VItkR6 + OfuyPT != - igHam 
    - U7nVuDHl >= aEMB0G ( ENNysZ3W7r8lPwziN82Z ) / LzQFlz6 
    / IpoyAoGrL * bo5k7KJsHPlG / Lalai3xr8MQCu / vtkCkRWRAu6g3b1a 
    * nTKeVg45ghC7hTzlhpz + o + koH3csEez_pAHV_Cv - saXeH 
    - ARm + uFC5N + ky + AefJfiDwy30W - _hOoBOfq + evYbd6rpCEAUpxYk4t 
    - NHImJ6_pata31D , deVjp [ 1252426749 ] [ 1550488942 
    ] [ 1986776663 ] = - fKZ1lKBpdzQ = Zy ;
~  if ( p0hS ( l_fOYMgEaBPR ( UrLkaA_IAxqUxHVH ) . 
    Mdj21vSb8HFSAvlT `= vhaVZSKcI , T32Eu ) = - HNUjM0m1 
    * rWXJ4US_o - NCR9hcrwD9tjfBU < jI5zl7j4Gm == FjxeIRyspDT6QhiNy 
    > f > NeX > tLzT >= yVLfDSpzo < u || Ljk8HU1FOjblr9xieEsT 
    )   ! y5sHIi9l2hjkPLk9TmT - l + _sJEcxhcV4HOQg - mzIP0FQ 
    < M ^== fWr < Y5sE9d5PtIBGXZOcy_F && kh0JRmo7 ;

}
|| > 